--- a/client/src/components/featured/featured.scss
+++ b/client/src/components/featured/featured.scss
@@ -1,8 +1,9 @@
 @import "../../app.scss";
 
 .featured {
-  height: 76vh;
+  height: 100vh;
   position: relative;
+  width: 100vw;
 
   .category {
     position: absolute;
@@ -31,7 +32,7 @@
   img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
   }
 
   .info {
@@ -60,8 +61,8 @@
 
     .buttons {
       display: flex;
-
-      button {
+         
+     a, button{
         padding: 10px 20px;
         border: none;
         border-radius: 5px;
@@ -72,6 +73,8 @@
         font-weight: 500;
         margin-right: 10px;
         cursor: pointer;
+        text-decoration: none;
+      
 
         &.play {
           background-color: white;
