--- a/client/src/components/listItem/listItem.scss
+++ b/client/src/components/listItem/listItem.scss
@@ -8,8 +8,8 @@
   color: white;
 
   img {
-    width: 100%;
-   // height: 100%;
+    width: 225px;
+   height: 120px;
     object-fit: cover;
   }
 
