--- a/client/src/pages/register/register.scss
+++ b/client/src/pages/register/register.scss
@@ -9,8 +9,14 @@
     url("https://www.notebookcheck.net/fileadmin/Notebooks/News/_nc3/netflixteaser.png");
   background-size: cover;
   position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
   .top {
+    position: absolute;
+    top: 0;
+    width: 100%;
     .wrapper {
       padding: 20px 50px;
       display: flex;
@@ -21,7 +27,7 @@
         height: 40px;
       }
 
-      .loginButton {
+      a {
         background-color: red;
         border: none;
         color: white;
@@ -36,31 +42,32 @@
   }
 
   .container {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
+    width: 65%;
+    padding: 20px;
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     color: white;
+    text-align: center;
 
     h1 {
-      font-size: 50px;
+      font-size: 45px;
     }
 
     h2 {
-      margin: 20px;
+      margin: 20px 0;
     }
 
     p {
       font-size: 20px;
+      margin-bottom: 20px;
     }
 
     .input {
-      width: 50%;
+      width: 100%;
+      max-width: 600px;
       background-color: white;
       display: flex;
       align-items: center;
@@ -69,21 +76,21 @@
       height: 50px;
       border-radius: 5px;
 
-      input{
-          flex: 9;
-          height: 100%;
-          border: none;
-          padding: 0 10px;
+      input {
+        flex: 9;
+        height: 100%;
+        border: none;
+        padding: 0 10px;
       }
 
-      .registerButton{
-          flex: 3;
-          height: 100%;
-          background-color: red;
-          border: none;
-          color: white;
-          font-size: 22px;
-          cursor: pointer;
+      .registerButton {
+        flex: 3;
+        height: 100%;
+        background-color: red;
+        border: none;
+        color: white;
+        font-size: 22px;
+        cursor: pointer;
       }
     }
   }
