--- a/client/src/components/listItem/listItem.scss
+++ b/client/src/components/listItem/listItem.scss
@@ -70,6 +70,8 @@
       .desc {
         font-size: 13px;
         margin-bottom: 10px;
+        margin-left: 5px;
+     
       }
 
       .genre {
