--- a/client/src/components/list/list.scss
+++ b/client/src/components/list/list.scss
@@ -2,6 +2,7 @@
   width: 100%;
   margin-top: 10px;
   margin-bottom: 10px;
+
   .listTitle {
     color: white;
     font-size: 20px;
@@ -15,7 +16,6 @@
     .sliderArrow {
       width: 20px;
       height: 50%;
-     // background-color: rgba(22, 22, 22, 0.5);
       color: white;
       position: absolute;
       z-index: 99;
@@ -44,8 +44,35 @@
   }
 }
 
-// @media screen and (max-width: 760px) {
-//   .list .wrapper .container {
-//     margin-left: 20px;
-//   }
+// Responsive adjustments for smaller screens
+@media screen and (max-width: 760px) {
+  .list .listTitle {
+    font-size: 16px;
+    margin-left: 5px;
+  }
 
+  .wrapper .sliderArrow {
+    width: 15px;
+    height: 40%;
+  }
+
+  .wrapper .container {
+    margin-left: 5px;
+    gap: 10px; // Adjust the gap between items for smaller screens
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .list .listTitle {
+    font-size: 14px;
+  }
+
+  .wrapper .sliderArrow {
+    width: 12px;
+    height: 30%;
+  }
+
+  .wrapper .container {
+    margin-left: 0px;
+  }
+}
