--- a/client/src/components/featured/featured.scss
+++ b/client/src/components/featured/featured.scss
@@ -3,7 +3,7 @@
 .featured {
   height: 85vh;
   &.fullHeight {
-    // height: 100vh; 
+    height: 100vh; 
     // overflow: scroll;
   }
   // position: relative;
